@@ -9,4 +9,4 @@ RUN mvn -f /app/pom.xml clean package -DskipTests
 
 FROM openjdk:17
 COPY --from=build /app/target/desafio-0.0.1-SNAPSHOT.jar /app/desafio.jar
-ENTRYPOINT ["java","-Dserver.port=$PORT","-Xmx268M","-Xss512K","-XX:CICompilerCount=2","-Dfile.encoding=UTF-8","-XX:+UseContainerSupport","-Djava.security.egd=file:/dev/./urandom","-Xlog:gc","-jar","/app/desafio.jar"]
+ENTRYPOINT ["java","-Dfile.encoding=UTF-8","-Djava.security.egd=file:/dev/./urandom","-jar","/app/desafio.jar"]
